[gd_scene load_steps=19 format=2]

[ext_resource path="res://objects/tobi/tobi.gd" type="Script" id=1]
[ext_resource path="res://objects/tobi/baby.png" type="Texture" id=2]
[ext_resource path="res://objects/tobi/state_machine.gd" type="Script" id=3]
[ext_resource path="res://objects/tobi/idle.gd" type="Script" id=4]
[ext_resource path="res://objects/tobi/run.gd" type="Script" id=5]
[ext_resource path="res://objects/tobi/jump.gd" type="Script" id=6]
[ext_resource path="res://objects/tobi/fall.gd" type="Script" id=7]
[ext_resource path="res://objects/tobi/wall_jump.gd" type="Script" id=8]
[ext_resource path="res://objects/tobi/duck.gd" type="Script" id=9]
[ext_resource path="res://objects/tobi/wall_slide.gd" type="Script" id=10]
[ext_resource path="res://objects/tobi/attack.gd" type="Script" id=11]
[ext_resource path="res://objects/tobi/die.gd" type="Script" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.1194
height = 23.8589

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=5]
resource_name = "running_throw"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}

[sub_resource type="Animation" id=6]
resource_name = "throw"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0.0156555, -0.332169 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
offset = Vector2( 0, -100 )
vframes = 5
hframes = 9
frame = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -31.0677 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0.324471, -0.721384 )
color = Color( 0.290196, 0.0941176, 0.0941176, 1 )
polygon = PoolVector2Array( -16.4451, -27.1173, 16.5894, -26.7767, 16.93, 28.0537, -16.7856, 28.0537 )

[node name="state_machine" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 4 )

[node name="run" type="Node" parent="state_machine"]
script = ExtResource( 5 )

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource( 6 )

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="wall_jump" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="duck" type="Node" parent="state_machine"]
script = ExtResource( 9 )

[node name="wall_slide" type="Node" parent="state_machine"]
script = ExtResource( 10 )

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource( 11 )

[node name="die" type="Node" parent="state_machine"]
script = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -200 )
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_top = 1.0
drag_margin_bottom = 0.03

[node name="Label" type="Label" parent="."]
margin_left = -17.4299
margin_top = -100.0
margin_right = 22.5701
margin_bottom = -86.0

[node name="ground_rays" type="Node2D" parent="."]
editor/display_folded = true

[node name="ray" type="RayCast2D" parent="ground_rays"]
position = Vector2( -0.150425, -0.734282 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 10 )

[node name="left_rays" type="Node2D" parent="."]
editor/display_folded = true

[node name="ray" type="RayCast2D" parent="left_rays"]
position = Vector2( -17.4299, -29.2369 )
enabled = true
exclude_parent = false
cast_to = Vector2( -10, 0 )

[node name="right_rays" type="Node2D" parent="."]
editor/display_folded = true

[node name="ray" type="RayCast2D" parent="right_rays"]
position = Vector2( 18.0511, -29.3338 )
enabled = true
exclude_parent = false
cast_to = Vector2( 10, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )
anims/running_throw = SubResource( 5 )
anims/throw = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
